[package]
name = "orc"
version = "0.1.3"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/clivern/orc"
repository = "https://github.com/clivern/orc"
categories = ["command-line-utilities"]
keywords = ["clivern", "orc"]
description = """
@TODO
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
