[package]
name = "orc-rs"
version = "0.1.4"
authors = ["Clivern <hello@clivern.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/clivern/orc-rs"
repository = "https://github.com/clivern/orc-rs"
categories = ["command-line-utilities"]
keywords = ["clivern", "orc-rs"]
description = """
@TODO
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
